<resources>
    <string name="app_name">随心记</string>
    <string name="daiban">随 心 记</string>
    <string name="changecity">切换城市</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="show_balance">显示余额</string>
    <string name="monthly_income_title">当月收入</string>
    <string name="monthly_expenditure_title">当月支出</string>
    <string name="add_cost_button_string">支出</string>
    <string name="add_earn_button_string">收入</string>

    <string name="page3_banner">备注</string>
    <string name="page3_edit_hint">记录点滴生活&#8230;</string>
    <string name="page3_count">0/30</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
</resources>

