<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_of_books"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="false"
        android:background="#fff">

        <ImageView
            android:id="@+id/header_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop"
            android:src="@drawable/yui_header"
            app:layout_heightPercent="25%"/>

        <!-- android:src="@drawable/yui_header"-->

        <at.markushi.ui.CircleButton
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/type_big_99999"
            app:cb_color="#ffffff"
            app:cb_pressedRingWidth="2dp"
            app:layout_heightPercent="16%"
            app:layout_marginTopPercent="17%"
            app:layout_widthPercent="25%"/>

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/main_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/add_button">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/in_and_out_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

        </android.support.percent.PercentRelativeLayout>

        <Button
            android:id="@+id/btn_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_default_shape"
            android:minHeight="0dp"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp"
            android:text="账单名称"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_marginTopPercent="2%"/>

        <TextView
            android:id="@+id/show_money_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/btn_default_shape"
            android:minHeight="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/show_balance"
            android:textColor="#008cff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_marginTopPercent="2%"/>

        <TextView
            android:id="@+id/monthly_income_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/header_img"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/monthly_income_title"
            android:textColor="@color/colorSlateGray"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/monthly_earn_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/monthly_income_title"
            android:layout_below="@id/monthly_income_title"
            android:fontFamily="sans-serif-light"
            android:textColor="#000"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/monthly_cost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/header_img"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/monthly_expenditure_title"
            android:textColor="@color/colorSlateGray"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/monthly_cost_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/monthly_cost_title"
            android:layout_below="@id/monthly_cost_title"
            android:fontFamily="sans-serif-light"
            android:textColor="#000"
            android:textSize="12sp"/>


    </android.support.percent.PercentRelativeLayout>

    <!-- drawer内容 -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/drawer_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/wolf_star"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="7dp"
            android:background="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/add_book_button"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/notification_add"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
